# egt

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TODO_tests.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: odp_source_sha.txt
src/egt/: aggregate_filechecker_benchmarks.py  aggregate_filesizes.py  algs_split_across_scaffolds.py  annotate_sample_df.py  arthropoda_umap_clusters.py  build_family_naming_map.py  cli.py  count_unique_changes_per_branch.py  custom_taxonomy.py  defining_features.py  defining_features_plot.py  defining_features_plotRBH.py  defining_features_qc_plots.py  dispersal_panel_style.py  divergence_vs_dispersal.py  entanglement_browse.py  entanglement_go_enrich.py  fourier_of_rates.py  get_assembly_sizes.py  go_subcommands.py  join_supplementary_tables.py  newick_to_common_ancestors.py  odol_annotate_blast.py  palette.py  palette_preview.py  perspchrom_df_to_tree.py  phylotreeumap.py  phylotreeumap_plotdfs.py  phylotreeumap_subsample.py  phylotreeumap_testpixels.py  pigeonhole_check.py  plot_alg_dispersal.py  plot_alg_dispersion.py  plot_alg_fusions.py  plot_branch_stats_advanced.py  plot_branch_stats_tree.py  plot_branch_stats_tree_pair.py  plot_branch_stats_vs_time.py  plot_chrom_number_vs_changes.py  plot_collapsed_tree.py  (+9 more)
src/egt/_testing/: __init__.py  gb_roundtrip.py  grid_verify_coo.py
src/egt/_vendor/: odp_plotting_functions.py
src/egt/data/: paper_palette.yaml  paper_palette_simple.yaml
src/egt/go/: __init__.py  benchmark_dispatch.py  enrichment.py  io.py  pair_coenrich.py  stats.py  sweep.py
src/egt/go/benchmarks/: __init__.py  alg_structure.py  camps.py  goatools_ref.py  simakov.py
src/egt/go/plots/: __init__.py  enrich.py  pair_coenrich.py  pair_distance.py  volcano.py
src/egt/legacy/: defining_features_plot2.py  plot_alg_fusions_v1.py  plot_alg_fusions_v2.py
src/egt/plot/: __init__.py  density_alpha.py  style.py
tests/: README_observational.md  conftest.py  test_aggregate_filechecker_benchmarks.py  test_aggregate_filesizes.py  test_algs_split_across_scaffolds.py  test_annotate_sample_df.py  test_arthropoda_umap_clusters.py  test_bokeh_helper.py  test_build_family_naming_map.py  test_cli.py  test_coo_construction.py  test_coo_integrity.py  test_count_unique_changes_per_branch.py  test_custom_taxonomy_policy.py  test_defining_features_edge_cases.py  test_defining_features_flags.py  test_defining_features_output.py  test_defining_features_plot.py  test_defining_features_plot2_main.py  test_defining_features_plotRBH.py  test_defining_features_qc_plots.py  test_dispersal.py  test_dispersal_panel_style.py  test_distance_computation.py  test_divergence_vs_dispersal.py  test_end_to_end_fixture.py  test_entanglement_browse.py  test_entanglement_go_enrich.py  test_fourier_of_rates.py  test_fourier_spectral_background.py  test_gb_roundtrip.py  test_get_assembly_sizes.py  test_go_benchmark_camps.py  test_go_benchmark_goatools_ref.py  test_go_benchmark_simakov.py  test_go_benchmarks.py  test_go_cli.py  test_go_coverage_edges.py  test_go_coverage_fillers.py  test_go_dotplot_variants.py  (+53 more)
tests/smoke/: test_cli.sh
tests/testdb/: generate_mini_BCnSSimakov2022.smk  generate_mini_genomes.sh
tests/testdb/go/: family_map.tsv  family_map_alg.tsv  gene2accession.tsv  gene2go.tsv  mini.obo  unique_pairs_alg.tsv  unique_pairs_mini.tsv
workflows/: annotate_sample_df.smk  odol_annotate_blast.smk  perspchrom_df_stats_and_mc.smk  perspchrom_df_stats_and_mc_submit.sh  phylotree_umap.smk  phylotree_umap_subsampling.smk  sample_to_num_chromosomes.smk
workflows/pipeline/: README.md  config.template.yaml
